=== master

* Make dirty plugin work correctly with typecast_on_load plugin (jeremyevans) (#1647)

* Add support for :require_modification option when setting up nested_attributes (jeremyevans)

* Add support for SQL/JSON path expressions to the pg_json_ops extension, supported by PostgreSQL 12+ (jeremyevans)

=== 5.25.0 (2019-10-01)

* Fix Sequel::SQL::NumericMethods#coerce to not raise NoMethodError if super method is not defined (jeremyevans) (#1645)

* Allow setting a default for a column that already has a default on Microsoft SQL Server (jeremyevans)

* Fix keyword argument separation warnings on Ruby master branch in csv_serializer plugin (jeremyevans)

* Add association_multi_add_remove plugin for adding/removing multiple associated objects in a single method call (AlexWayfer, jeremyevans) (#1641, #1643)

* Make sharding plugin integrate with server_block extension (jeremyevans)

=== 5.24.0 (2019-09-01)

* Add Database#skip_logging? private method designed for extensions to force query timing even if no logger is present (adam12) (#1640)

* Allow a hostname specified in a defaults_file in the mysql2 adapter, by not explicitly setting :host (sapio-bdeamer) (#1638)

* Convert all database array types to Ruby arrays in the jdbc adapter (jeremyevans)

* Add static_cache_cache plugin for caching rows for static_cache models to a file to avoid database queries during model initialization (jeremyevans)

* Add :cache_file plugin option to pg_auto_constraint_validations plugin, for caching metadata to a file for faster initialization (jeremyevans)

* Support :unique_deferrable and :primary_key_deferrable column options (jeremyevans)

* Support :generated_always_as column option on PostgreSQL 12+ (jeremyevans)

=== 5.23.0 (2019-08-01)

* Work around a bug on jdbc-sqlite3 3.27.2.1 when parsing schema for tables with columns with default values (jeremyevans)
